--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title:            Neg Code blog
+tagline:          Black Theme for Jekyll
 description:      "Neg Code blog"
 logo:             logo3.png
 disqus_shortname: Neg
@@ -7,7 +8,10 @@ dropcap:          true # dropcap theme
 # Change url to your domain. Leave localhost server or blank when working locally.
 # or use the hint from http://jekyllrb.com/docs/github-pages/ to keep this the same 
 # whether working locally or remotely. Start Jekyll with: jekyll serve --baseurl ''
+url:              https://github.com/karloespiritu/blackdoc
+baseurl:          /
 #url:        	  http://hmfaysal.github.io
+version:          1.0.0
 
 # Owner/author information
 owner:
@@ -47,13 +51,15 @@ links:
 timezone:    Europe/Moscow
 future:      true
 highlighter: pygments
-markdown:    kramdown
+markdown:    redcarpet
 github: [Repository metadata]
 paginate:    5
 paginate_path: "page:num"
 
-# https://github.com/mojombo/jekyll/wiki/Permalinks
-permalink:   /:categories/:title
+# Permalinks https://github.com/mojombo/jekyll/wiki/Permalinks
+permalink:        pretty
+relative_permalinks: true
+# permalink:   /:categories/:title
 
 kramdown:
   auto_ids: true
