--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,9 @@
 title:            Neg Code blog
 tagline:          Neg Code blog
 description:      "Neg Code blog"
-logo:             logo3.png
 disqus_shortname: Neg
 share:            true
-dropcap:          true # dropcap theme
-# Change url to your domain. Leave localhost server or blank when working locally.
-# or use the hint from http://jekyllrb.com/docs/github-pages/ to keep this the same 
-# whether working locally or remotely. Start Jekyll with: jekyll serve --baseurl ''
-url:              https://github.com/karloespiritu/blackdoc
+dropcap:          true
 baseurl:          /
 url:        	  http://neg-serg.github.io
 version:          0.1
@@ -20,21 +15,13 @@ owner:
   avatar:         colourful_avatar.png
   email:          serg.zorg@gmail.com
   # Use the coder's toolbox at http://coderstoolbox.net/string/#!encoding=xml&action=encode&charset=us_ascii to encode your description into XML string
-  description:    Awesome Dude, Awesome Life
   # Social networking links used in footer. Update and remove as you like.
-  twitter:        hmfaysal
-  facebook:       hmfaysal
   github:         https://github.com/neg-serg?tab=repositories
   github_username:  neg-serg
-  instagram:      hmfaysal
-  # For Google Authorship https://plus.google.com/authorship
   google_plus:    https://plus.google.com/u/0/102602916593522619858
 
-# Analytics and webmaster tools stuff goes here
 google_analytics:   
 google_verify:      
-# https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
-bing_verify:         
     
 # Links to include in footer navigation
 # For external links add external: true
@@ -48,7 +35,6 @@ links:
   - title: Categories
     url: /categories
 
-# http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:    Europe/Moscow
 future:      true
 highlighter: rouge
@@ -56,10 +42,7 @@ markdown:    kramdown
 excerpt_separator: "<!--excerpt-->"
 paginate: 10
 github: [Repository metadata]
-
-# Permalinks https://github.com/mojombo/jekyll/wiki/Permalinks
 permalink:     pretty
-# permalink:   /:categories/:title
 
 kramdown:
   auto_ids: true
@@ -74,89 +57,6 @@ kramdown:
     coderay_tab_width: 4
     coderay_bold_every: 10
     coderay_css: class
-
-prose:
-  rooturl: '_posts'
-  siteurl: 'http://neg-serg.github.io/'
-  relativeLinks: 'http://neg-serg.github.io/links.jsonp'
-  media: 'images'
-  metadata:
-    _posts:
-      - name: "published"
-        field:
-          label: "Published"
-          element: "checkbox"
-          value: "true"
-      - name: "layout"
-        field:
-          element: "hidden"
-          label: "Layout"
-          value: "post"
-      - name: "title"
-        field:
-          label: "Title"
-          element: "text"
-          value: "An Awesome Headline!"
-      - name: "description"
-        field:
-          element: "text"
-          label: "Description"
-          placeholder: "Enter Post Description"
-      - name: "headline"
-        field:
-          element: "text"
-          label: "beadline"
-          placeholder: "Enter Post Headline"
-      - name: "modified"
-        field:
-          element: "text"
-          label: "Has this page been modified?"
-          placeholder: "YYYY-MM-DD"
-      - name: "categories"
-        field:
-          element: "multiselect"
-          label: "Add categories"
-          placeholder: "Choose categories"
-          value: personal
-          options:
-            - name: "Personal"
-              value: personal
-            - name: "Engineering"
-              value: engineering
-            - name: "Physics"
-              value: physics
-            - name: "Psychology"
-              value: psychology
-            - name: "Interesting"
-              value: interesting
-            - name: "Web-Development"
-              value: webdevelopment
-          alterable: true
-      - name: "tags"
-        field:
-          element: "text"
-          label: "Tags"
-          placeholder: "Enter tags, separated by spaces"
-      - name: "imagefeature"
-        field:
-          element: "text"
-          label: "Featured Image"
-          placeholder: "somefile.jpg"
-      - name: "mathjax"
-        field:
-          element: "checkbox"
-          label: "MathJax"
-          value: false
-      - name: "featured"
-        field:
-          element: "checkbox"
-          label: "Featured?"
-          value: false
-      - name: "comments"
-        field:
-          element: "checkbox"
-          label: "Comments"
-          value: false
 
 include: [".htaccess"]
 exclude: [ 
