--- a/_config.yml
+++ b/_config.yml
@@ -22,12 +22,6 @@ owner:
 
 engine: erb
 
-relative_permalinks: false
-
-tag_page_layout: tag_page
-tag_page_dir: tag
-# tag_permalink_style: pretty
-
 tag_page_data:
   sitemap: true
 
@@ -54,6 +48,8 @@ excerpt_separator: "<!--excerpt-->"
 paginate: 10
 github: [Repository metadata]
 permalink:   pretty
+# relative_permalinks: false
+permalink: '/:year/:month/:title'
 
 kramdown:
   auto_ids: true
