--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ owner:
   google_plus:      https://plus.google.com/u/0/102602916593522619858
 
 engine: erb
+encoding: utf-8
 
 tag_page_data:
   sitemap: true
